OS-7892. ML events

--- a/arcee/arcee_receiver/requirements.txt
+++ b/arcee/arcee_receiver/requirements.txt
@@ -2,10 +2,12 @@ aiohttp==3.10.2
 sanic==23.12.1
 sanic-ext==23.12.0
 motor==3.6.0
+kombu==5.3.4
 pymongo==4.9.1
 python-etcd==0.4.5
 mongodb-migrations==1.2.1
 pydantic==2.4.2
 # OptScale packages
+-e optscale_client/config_client
 -e optscale_client/aconfig_cl
 -e tools/optscale_time
