--- a/arcee/Dockerfile
+++ b/arcee/Dockerfile
@@ -6,6 +6,7 @@ ENV PYTHONPATH /usr/src/app/
 
 COPY arcee/arcee_receiver/requirements.txt arcee/arcee_receiver/requirements.txt
 COPY optscale_client/aconfig_cl optscale_client/aconfig_cl
+COPY optscale_client/config_client optscale_client/config_client
 COPY tools/optscale_time tools/optscale_time
 
 RUN pip install --no-cache-dir -r /usr/src/app/arcee/arcee_receiver/requirements.txt
