OS-7906. Added sending email compatibility with AWS SES
## Description

Added compatibility with AWS SES and another smtp

## Related issue number

OS-7906

## Checklist

* [ ] The pull request title is a good summary of the changes
* [ ] Unit tests for the changes exist
* [ ] New and existing unit tests pass locally

--- a/optscale-deploy/optscale/values.yaml
+++ b/optscale-deploy/optscale/values.yaml
@@ -1063,8 +1063,10 @@ fake_cad_enabled: 0
 smtp:
   server:
   email:
+  login:
   port:
   password:
+  protocol: SSL
 
 #resource discovery settings - the page size for requesting resources from
 #the cloud adapter and the number of resources stored in memory before writing
