OS-8060. Add public_ip to user_template.yml

--- a/optscale-deploy/overlay/user_template.yml
+++ b/optscale-deploy/overlay/user_template.yml
@@ -108,3 +108,8 @@ grafana:
   env:
     htpasswd_user: userforgrafana
     htpasswd_pass: passwordforgrafana
+
+# Public ip of OptScale VM used in external integrations like emails,
+# google calendar etc. Defaults to internal ip, change it if internal ip
+# is not accessible in your network
+public_ip:
