--- a/ngui/ui/package.json
+++ b/ngui/ui/package.json
@@ -84,8 +84,8 @@
     "preview": "vite preview",
     "test": "vitest",
     "test:ci": "vitest -u --silent",
-    "lint:check": "eslint . --ext .ts,.tsx --max-warnings=0",
-    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "lint:check": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --fix",
     "storybook": "storybook dev -p 9009 -s public",
     "storybook:build": "storybook build -o ./storybook -s public",
     "storybook:clean": "rm -rf src/tests/__snapshots__",
@@ -111,6 +111,7 @@
     ]
   },
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@storybook/addon-actions": "^7.6.20",
     "@storybook/addon-backgrounds": "^7.6.20",
     "@storybook/addon-controls": "^7.6.20",
@@ -121,20 +122,22 @@
     "@storybook/theming": "^7.6.5",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.10.5",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "eslint": "^8.56.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.19.1",
+    "@typescript-eslint/parser": "^8.19.1",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-storybook": "^0.8.0",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.3",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "glob": "^10.3.10",
+    "globals": "^15.13.0",
     "jsdom": "^22.1.0",
     "prettier": "^3.3.3",
     "redux-immutable-state-invariant": "^2.1.0",
     "storybook": "^7.6.20",
+    "typescript-eslint": "^8.19.1",
     "vitest": "^0.34.6"
   }
 }
