--- a/jira_ui/ui/package.json
+++ b/jira_ui/ui/package.json
@@ -30,8 +30,8 @@
     "start": "vite",
     "build": "vite build",
     "server": "node server.js",
-    "lint:check": "eslint . --ext=js --max-warnings=0",
-    "lint:fix": "eslint . --ext=js --fix",
+    "lint:check": "eslint . --max-warnings=0",
+    "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --check 'src/**/*.js'",
     "prettier:fix": "prettier --write 'src/**/*.js'",
     "check": "npm run lint:check && npm run prettier:check",
@@ -50,13 +50,17 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^8.57.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "@babel/core": "^7.26.0",
+    "@babel/eslint-parser": "^7.25.9",
+    "@babel/preset-react": "^7.26.3",
+    "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-import": "^2.30.0",
-    "eslint-plugin-react": "^7.35.2",
-    "eslint-plugin-unused-imports": "^3.2.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-unused-imports": "^4.1.4",
+    "globals": "^15.13.0",
     "prettier": "^3.3.3"
   }
 }
