OS-8075. Add option to disable email verification

--- a/optscale-deploy/optscale/values.yaml
+++ b/optscale-deploy/optscale/values.yaml
@@ -1078,6 +1078,7 @@ resource_discovery_settings:
 
 encryption_salt:
 encryption_salt_auth:
+disable_email_verification:
 
 # settings for bi_scheduler
 bi_settings:
