--- a/ngui/ui/package.json
+++ b/ngui/ui/package.json
@@ -21,6 +21,7 @@
     "@nivo/bar": "^0.87.0",
     "@nivo/colors": "^0.87.0",
     "@nivo/core": "^0.87.0",
+    "@nivo/legends": "^0.87.0",
     "@nivo/line": "^0.87.0",
     "@nivo/pie": "^0.87.0",
     "@nivo/scales": "^0.87.0",
