OS-8044: Ubuntu 22/24 support (#1297)
- updated k8s to 1.32
- using containerd instead of docker
- using filbeats as a logging service
- integrated buildKit instead of docker build
- integrated nerdctl insetad of docker
- used python_on_whales instead of docker client
- added --insecure flag to runkube to use insecure registry with
self-signed cert
- removed docker
- removed etcd-operator
- some fixes in cleanmongodb to improve stability
- build tool selection in build.sh (docker, nerdctl)

--- a/docker_images/elk/40-logstash-gelp.conf
+++ b/docker_images/elk/40-logstash-gelp.conf
@@ -1,8 +1,12 @@
 input {
-  gelf {
-        type => docker
+    beats {
         port => 12201
-        use_tcp => true
-        use_udp => true
+        host => "0.0.0.0"
+        type => "log"
+    }
   }
-}
+  filter {
+    mutate {
+      replace => { "message" => "%{name} %{message}" }
+    }
+  }
