--- a/optscale-deploy/optscale/templates/cleanelkdb.yaml
+++ b/optscale-deploy/optscale/templates/cleanelkdb.yaml
@@ -1,7 +1,7 @@
 {{- $config := .Values.cleanelkdb }}
 {{ if eq .Values.deploy_cleanelkdb "true" }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}
