--- a/optscale-deploy/optscale/templates/influxdb.yaml
+++ b/optscale-deploy/optscale/templates/influxdb.yaml
@@ -68,4 +68,4 @@ spec:
           path: /optscale/influxdb
           type: DirectoryOrCreate
       nodeSelector:
-        node-role.kubernetes.io/master:
+        node-role.kubernetes.io/control-plane:
