--- a/optscale-deploy/optscale/templates/resource_discovery.yaml
+++ b/optscale-deploy/optscale/templates/resource_discovery.yaml
@@ -41,7 +41,7 @@ spec:
             memory: {{ $config.memory_limit }}Mi
 
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}-scheduler
