--- a/docker_images/cleanmongodb/requirements.txt
+++ b/docker_images/cleanmongodb/requirements.txt
@@ -1,5 +1,6 @@
 mysql-connector-python==9.1.0
 SQLAlchemy==1.3.24
 pymongo==4.6.3
+retrying==1.3.3
 # OptScale packages
 -e optscale_client/config_client
