--- a/optscale-deploy/ansible/roles/k8s-configure/tasks/helm.yaml
+++ b/optscale-deploy/ansible/roles/k8s-configure/tasks/helm.yaml
@@ -1,14 +1,10 @@
 ---
 - name: Download Helm install script
   get_url:
-    url: https://git.io/get_helm.sh
+    url: https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
     dest: /tmp/helm-install.sh
     mode: 0755
 
 - name: Install Helm
-  shell: /tmp/helm-install.sh -v v2.17.0
+  shell: /tmp/helm-install.sh
   become: yes
-
-- name: Install Tiller
-  shell: helm init
-  become: no
