--- a/optscale-deploy/optscale/templates/calendar_observer.yaml
+++ b/optscale-deploy/optscale/templates/calendar_observer.yaml
@@ -35,7 +35,7 @@ spec:
         - name: HX_ETCD_PORT
           value: {{ .Values.etcd.service.externalPort | quote }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}-scheduler
