--- a/optscale-deploy/optscale/templates/cleanmongodb.yaml
+++ b/optscale-deploy/optscale/templates/cleanmongodb.yaml
@@ -1,6 +1,6 @@
 {{- $config := .Values.cleanmongodb }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}
