--- a/optscale-deploy/optscale/templates/demo_org_cleanup.yaml
+++ b/optscale-deploy/optscale/templates/demo_org_cleanup.yaml
@@ -1,6 +1,6 @@
 {{- $config := .Values.demo_org_cleanup }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}
