--- a/optscale-deploy/optscale/templates/failed_imports_dataset_generator.yaml
+++ b/optscale-deploy/optscale/templates/failed_imports_dataset_generator.yaml
@@ -1,6 +1,6 @@
 {{- $config := .Values.failed_imports_dataset_generator }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}
