--- a/optscale-deploy/optscale/templates/layout_cleaner.yaml
+++ b/optscale-deploy/optscale/templates/layout_cleaner.yaml
@@ -1,6 +1,6 @@
 {{- $config := .Values.layout_cleaner }}
 ---
-apiVersion: batch/v1beta1
+apiVersion: batch/v1
 kind: CronJob
 metadata:
   name: {{ $config.name }}
