--- a/optscale-deploy/optscale/templates/mongodb.yaml
+++ b/optscale-deploy/optscale/templates/mongodb.yaml
@@ -22,7 +22,7 @@ metadata:
 data:
   mongod.conf: ""
 ---
-apiVersion: policy/v1beta1
+apiVersion: policy/v1
 kind: PodDisruptionBudget
 metadata:
   name: "{{ $config.name }}"
