--- a/.github/workflows/test_gemini_worker.yaml
+++ b/.github/workflows/test_gemini_worker.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   build_image:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
