OSN-682: Updated clickhouse (#1415)
also verified update scenario

trace log ecample
```
2025.03.06 12:21:40.723282 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTask::PrepareStage: Selected MergeAlgorithm: Horizontal
2025.03.06 12:21:40.724966 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_1_135_27, total 1722 rows starting from the beginning of the part
2025.03.06 12:21:40.725589 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_136_136_0, total 28 rows starting from the beginning of the part
2025.03.06 12:21:40.726044 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_137_137_0, total 12 rows starting from the beginning of the part
2025.03.06 12:21:40.726559 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_138_138_0, total 20 rows starting from the beginning of the part
2025.03.06 12:21:40.726966 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_139_139_0, total 2 rows starting from the beginning of the part
2025.03.06 12:21:40.728490 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTreeSequentialSource: Reading 2 marks from part 202503_140_140_0, total 2 rows starting from the beginning of the part
2025.03.06 12:21:40.752174 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Debug> MergeTask::MergeProjectionsStage: Merge sorted 1786 rows, containing 76 columns (76 merged, 0 gathered) in 0.029761612 sec., 60010.190308240024 rows/sec., 85.35 MiB/sec.
2025.03.06 12:21:40.765628 [ 657 ] {9bbabecf-a2da-4bf4-bd0c-302316d04303::202503_1_140_28} <Trace> MergedBlockOutputStream: filled checksum

--- a/optscale-deploy/optscale/templates/clickhouse/statefulset.yaml
+++ b/optscale-deploy/optscale/templates/clickhouse/statefulset.yaml
@@ -28,8 +28,11 @@ spec:
     spec:
       containers:
         - name: {{ .Values.clickhouse.name }}
-          image: "yandex/clickhouse-server:21.10"
+          image: "clickhouse/clickhouse-server:24.12"
           imagePullPolicy: {{ .Values.clickhouse.image.pullPolicy }}
+          env:
+            - name: CLICKHOUSE_SKIP_USER_SETUP
+              value: "1"
           ports:
             - name: http
               containerPort: {{ .Values.clickhouse.service.httpPort }}
@@ -59,10 +62,16 @@ spec:
               mountPath: /var/lib/clickhouse/
             - name: config-volume
               mountPath: /etc/clickhouse-server/
+            - name: clickhouse-logs
+              mountPath: /var/log/clickhouse-server/
       volumes:
         - name: clickhouse-data-volume
           hostPath:
             path: /optscale/clickhouse
+            type: DirectoryOrCreate
+        - name: clickhouse-logs
+          hostPath:
+            path: /optscale/clickhouse/logs
             type: DirectoryOrCreate
         - name: config-volume
           configMap:
