OSN-700 Used clickhouse-connect instead of clickhouse-driver (#1465)
clickhouse-connect instead of clickhouse-driver

--- a/bumiworker/Dockerfile
+++ b/bumiworker/Dockerfile
@@ -11,6 +11,7 @@ COPY optscale_client/insider_client optscale_client/insider_client
 COPY optscale_client/rest_api_client optscale_client/rest_api_client
 COPY tools/cloud_adapter tools/cloud_adapter
 COPY tools/optscale_time tools/optscale_time
+COPY tools/optscale_data tools/optscale_data
 
 COPY bumiworker/requirements.txt ./bumiworker/requirements.txt
 RUN pip install --no-cache-dir -r bumiworker/requirements.txt
