--- a/bumiworker/requirements.txt
+++ b/bumiworker/requirements.txt
@@ -1,12 +1,14 @@
 pymongo==4.6.3
 kombu==5.3.4
 boto3==1.34.7
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 # OptScale packages
 -e tools/cloud_adapter
+-e tools/optscale_data
 -e tools/optscale_time
 -e optscale_client/config_client
 -e optscale_client/herald_client
 -e optscale_client/insider_client
 -e optscale_client/metroculus_client
 -e optscale_client/rest_api_client
+
