--- a/metroculus/metroculus_worker/requirements.txt
+++ b/metroculus/metroculus_worker/requirements.txt
@@ -1,9 +1,10 @@
 kombu==5.3.4
 requests==2.32.3
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 pymongo==4.6.3
 # OptScale packages
 -e optscale_client/config_client
 -e optscale_client/rest_api_client
 -e tools/cloud_adapter
+-e tools/optscale_data
 -e tools/optscale_time
