--- a/bi_exporter/Dockerfile
+++ b/bi_exporter/Dockerfile
@@ -9,6 +9,8 @@ WORKDIR /usr/src/app/
 COPY optscale_client/config_client optscale_client/config_client
 COPY optscale_client/rest_api_client optscale_client/rest_api_client
 COPY tools/optscale_time tools/optscale_time
+COPY tools/optscale_data tools/optscale_data
+
 
 COPY bi_exporter/requirements.txt bi_exporter/requirements.txt
 
