--- a/bi_exporter/requirements.txt
+++ b/bi_exporter/requirements.txt
@@ -1,10 +1,12 @@
 kombu==5.3.4
 boto3==1.34.7
 azure-storage-blob==12.25.0
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 pymongo==4.6.3
 
 # OptScale packages
 -e optscale_client/config_client
 -e optscale_client/rest_api_client
+-e tools/optscale_data
 -e tools/optscale_time
+
