--- a/diworker/requirements.txt
+++ b/diworker/requirements.txt
@@ -5,10 +5,11 @@ mongodb-migrations==0.7.0
 retrying==1.3.3
 pandas==2.1.4
 pyarrow==14.0.1
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 pyrabbit==1.1.0
 # OptScale packages
 -e tools/cloud_adapter
+-e tools/optscale_data
 -e tools/optscale_time
 -e optscale_client/config_client
 -e optscale_client/herald_client
