--- a/docker_images/users_dataset_generator/Dockerfile
+++ b/docker_images/users_dataset_generator/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /usr/src/app/
 ENV PYTHONPATH /usr/src/app/
 
 COPY optscale_client/config_client optscale_client/config_client
+COPY tools/optscale_data tools/optscale_data
 
 COPY docker_images/users_dataset_generator/requirements.txt docker_images/users_dataset_generator/
 RUN pip install --no-cache-dir -r docker_images/users_dataset_generator/requirements.txt
