--- a/docker_images/users_dataset_generator/requirements.txt
+++ b/docker_images/users_dataset_generator/requirements.txt
@@ -1,8 +1,9 @@
 boto3==1.34.7
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 mysql-connector-python==9.1.0
 pymongo==4.6.3
 SQLAlchemy==1.3.24
 
 # OptScale packages
 -e optscale_client/config_client
+-e tools/optscale_data
