--- a/metroculus/metroculus_api/requirements.txt
+++ b/metroculus/metroculus_api/requirements.txt
@@ -1,7 +1,7 @@
 tornado==6.4.2
 apispec==6.3.1
 pymongo==4.6.3
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 pyyaml==6.0.1
 # OptScale packages
 -e optscale_client/config_client
