--- a/rest_api/Dockerfile
+++ b/rest_api/Dockerfile
@@ -7,6 +7,7 @@ COPY tools/cloud_adapter tools/cloud_adapter
 COPY tools/optscale_exceptions tools/optscale_exceptions
 COPY tools/optscale_types tools/optscale_types
 COPY tools/optscale_time tools/optscale_time
+COPY tools/optscale_data tools/optscale_data
 
 COPY optscale_client/config_client optscale_client/config_client
 COPY optscale_client/auth_client optscale_client/auth_client
