--- a/rest_api/requirements.txt
+++ b/rest_api/requirements.txt
@@ -9,7 +9,7 @@ boto3==1.34.7
 kombu==5.3.4
 xlsxwriter==1.4.4
 json-excel-converter[xlsxwriter]==1.3.0
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 netaddr==0.7.19
 pydevd-pycharm==201.5616.27
 cryptocode==0.1
@@ -21,6 +21,7 @@ currency-symbols==2.0.3
 
 # OptScale packages
 -e tools/cloud_adapter
+-e tools/optscale_data
 -e tools/optscale_exceptions
 -e tools/optscale_types
 -e tools/optscale_time
