--- a/risp/risp_worker/requirements.txt
+++ b/risp/risp_worker/requirements.txt
@@ -2,7 +2,7 @@ cryptography==44.0.1
 pymongo==4.6.3
 boto3==1.34.7
 kombu==5.3.4
-clickhouse-driver==0.2.9
+clickhouse-connect==0.8.15
 pyyaml==6.0.1
 # OptScale packages
 -e optscale_client/config_client
