OSN-820. Fixed dependabot workflow permissions issue
## Description

Fixed dependabot workflow permissions issue

## Related issue number

OSN-820

## Special notes

<!-- Please provide additional information if required. -->

## Checklist

* [ ] The pull request title is a good summary of the changes
* [ ] Unit tests for the changes exist
* [ ] New and existing unit tests pass locally

--- a/.github/workflows/test_katara_service.yaml
+++ b/.github/workflows/test_katara_service.yaml
@@ -1,5 +1,6 @@
 name: Build katara_service test image and run tests on it
 run-name: Build katara_service test image and run tests on it - started by ${{ github.actor }}
+permissions: read-all
 on:
   pull_request:
     types: [opened, synchronize]
