--- a/.github/workflows/test_jira_ui.yaml
+++ b/.github/workflows/test_jira_ui.yaml
@@ -1,5 +1,6 @@
 name: Build jira_ui test image and run tests on it
 run-name: Build jira_ui test image and run tests on it - started by ${{ github.actor }}
+permissions: read-all
 on:
   pull_request:
     types: [opened, synchronize]
