--- a/ngui/docker-compose.yml
+++ b/ngui/docker-compose.yml
@@ -1,20 +1,23 @@
 version: "3.9"
+
 services:
   web:
     build:
-      args:
-        - NODE_ENV=development
-    environment:
-      - BUILD_MODE=development
       context: ../
       dockerfile: ./ngui/Dockerfile
-    # env_file:
-    #   - ui/.env
-    #   - server/.env
+      args:
+        NODE_ENV: development
+    environment:
+      BUILD_MODE: development
     ports:
       - "4000:4000"
     depends_on:
       redis:
         condition: service_started
+    restart: unless-stopped
+
   redis:
     image: "redis:7.0.9"
+    ports:
+      - "6379:6379"
+    restart: unless-stopped
