--- a/ngui/docker-compose.yml
+++ b/ngui/docker-compose.yml
@@ -1,23 +1,17 @@
-version: "3.9"
-
 services:
   web:
     build:
+      args:
+        - NODE_ENV=development
       context: ../
       dockerfile: ./ngui/Dockerfile
-      args:
-        NODE_ENV: development
     environment:
-      BUILD_MODE: development
+      - BUILD_MODE=development
+      - UI_BUILD_PATH=/usr/src/app/ui/dist
+      - PROXY_URL=http://localhost:4000
     ports:
       - "4000:4000"
     depends_on:
       redis:
         condition: service_started
-    restart: unless-stopped
-
-  redis:
-    image: "redis:7.0.9"
-    ports:
-      - "6379:6379"
     restart: unless-stopped
