--- a/ngui/server/.env
+++ b/ngui/server/.env
@@ -1,5 +1,5 @@
 # ngui React app build directory path
-UI_BUILD_PATH=.dist
+UI_BUILD_PATH=/usr/src/app/ui/dist
 
 # Cluster URL to proxy API requests. Used for endpoints that are not yet migrated to Apollo.
 PROXY_URL=http://localhost:4000
