--- a/ngui/server/.env
+++ b/ngui/server/.env
@@ -2,7 +2,7 @@
 UI_BUILD_PATH=/usr/src/app/ui
 
 # Cluster URL to proxy API requests. Used for endpoints that are not yet migrated to Apollo.
-PROXY_URL=http://localhost:4000
+PROXY_URL=http://localhost:4000/auth/v2/tokens
 
 # Keeper endpoint. Used for endpoints that are migrated to Apollo.
 KEEPER_ENDPOINT=
