--- a/ngui/server/.env
+++ b/ngui/server/.env
@@ -2,7 +2,7 @@
 UI_BUILD_PATH=/usr/src/app/ui
 
 # Cluster URL to proxy API requests. Used for endpoints that are not yet migrated to Apollo.
-PROXY_URL=http://localhost:4000/auth/v2/tokens
+PROXY_URL=http://localhost:4000
 
 # Keeper endpoint. Used for endpoints that are migrated to Apollo.
 KEEPER_ENDPOINT=
@@ -14,7 +14,7 @@ SLACKER_ENDPOINT=
 RESTAPI_ENDPOINT=
 
 # Auth endpoint. Used for endpoints that are migrated to Apollo.
-AUTH_ENDPOINT=
+AUTH_ENDPOINT="http://localhost:4000/auth/v2/tokens"
 
 # Helps distinguish environments with the same values for NODE_ENV/import.meta.env/etc., because they are built similarly/identically (e.g., with k8s). 
 # Can be any desired value, e.g., 'staging', 'production', etc.
